[package]
name = "sp-starks"
version = "0.1.0"
authors = ["suvi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/zCloak-Network/substrate", default-features = false }
bincode = { version = "1.3.1", optional = true }
starksVM = { path = "../starksVM",optional = true,default-features = false }
# starksVM = { git = "https://github.com/jonathanxuu/distaff.git", optional = true, branch = "lib", default-features = false}
sp-runtime-interface = { git = "https://github.com/zCloak-Network/substrate", default-features = false }
sp-runtime = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4", optional = true }

[dev-dependencies]
frame-support = { git = "https://github.com/zCloak-Network/substrate" }

[features]
default = ["std"]
std = [
    "codec/std",
    "bincode",
    "starksVM/std",
    "sp-runtime-interface/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "hex",
]
